1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins

    Multisite:
    * New availability view for arbitrary host/service collections
    * New option auth_by_http_header to use the value of a HTTP header
    variable for authentication (Useful in reverse proxy environments)

    Event Console:
    * New rule feature: automatically delete event after actions

    Checks & Agents:
    * solaris_mem: New check for memory and swap for Solaris agent
    * New special agent agent_vsphere for monitoring ESX (VMware) Hosts
      via vSphere interface
    * new special agent agent_random for creating random monitoring data
    * New checks: windows_intel_bonding / windows_broadcom_bonding
    * cisco_qos: adhere qos-bandwidth policies
    * Implemented SAP monitoring based on the agent plugin mk_sap. This
      must be run on a linux host. It connects via RFC calls to SAP R/3
      systems to retrieve monitoring information for this or other machines.
    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios
    * openvpn_clients: new check for OpenVPN connections
    * check_disk_smb: WATO formalization for active check check_disk_smb
    
    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Valuespec: CascadingDropdown now able to process choice values from functions

1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined